# Spider

./: 2018数据整合.py  51job.py  Config.py  Cover_strategy.py  Kline_analyze.py  README.md  User_agent_list.py  beautifulsoup.ipynb  crash_callback.py  databasePool.py  get_market_info.py  manage.py  selenuim-yw-fb.py  selenuim-京东.py  selenuim-药渡网.py  selenuim-豆瓣影评.py  sqlite3.ipynb  taobao.py  今日头条.py  信用中国（北京）.py  工作表 1.twb  抖音.py  拉钩模拟登录.py  淘宝美食抓取.ipynb  淘宝美食抓取.py
Meituan/: items.py  middlewares.py  pipelines.py  settings.py
Meituan/spiders/: meituan.py
OpencvMatch/: CMakeLists.txt  imgmatch.cpp
scrapy-ganji/ganji/: items.py  pipelines.py  settings.py
scrapy-ganji/ganji/spiders/: gj.py
scrapyseleniumtest/scrapyseleniumtest/: items.py  middlewares.py  pipelines.py  settings.py
sky/: 京东滑动验证码.py
sky/dajie/: crawler.py  parser.py  selenium_login.py
sky/jd_crack/: jd_comment.py  jd_crawler.py  jdlogin.py  logger.py
sky/juxian/: temp1.py
sky/zhaopingou/: config.py  crawler.py  parser.py  selenium_login.py
sky2/: zpdog.py
weibo/: settings.py
zhihuuser/zhihuuser/: items.py  pipelines.py  settings.py
zhihuuser/zhihuuser/spiders/: zhihu.py
企查查工商数据/: mongo_redis_mgr.py  qcc.py
企查查工商数据/ProxyPool/proxypool/: crawler.py
分布式京东商品详情页/: client_crawler.py  gevent-试验.py  master.py  mongo_mgr.py  mongo_redis_mgr.py  protocol_constants.py  socket_client.py  socket_server.py
我能站在河边钓上一整天的鱼/: 钓鱼技巧.py  钓鱼视频.py
我能站在河边钓上一整天的鱼/diaochang/: scrapy.cfg
抖音/: douyin.txt  抖音.py
拉钩/: lagou.py  mongo_redis_mgr.py
美团酒店/: city_name.py  美团 - 火车时刻列表.py  美团.py
(+7 files in other folders)
